--- a/src/components/LiveGameCard/styles/livegameStyle.css
+++ b/src/components/LiveGameCard/styles/livegameStyle.css
@@ -46,6 +46,14 @@
     color: var(--text);
 }
 
+.live-game-card-time {
+    margin-top: 0.5rem;
+    font-size: 0.9rem;
+    font-weight: 600;
+    color: var(--text-secondary);
+    text-align: center;
+}
+
 .empty-games-list-container{
     display: flex;
     flex-direction: column;
